--- a/Spotify Music clone/index.html
+++ b/Spotify Music clone/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/utility.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/utility.css">
     <title>Spotify - Web Player: Music for everyone</title>
 </head>
 
@@ -114,7 +114,8 @@
         </div>
     </div>
     </div>
-    <script src="/JS/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
+
 
 </html>
